# BatDetect2_DPG

./: .gitignore  .gitmodules  BatCalls.py  Classifier.py  ClassifierConstants.py  Classify.bat  Classify.sh  CudaInstall.bat  CudaInstall.sh  EchoMeter.py  FileDialog.py  Install.bat  Install.sh  Net2dFast.py  README.md  README.md.backup  SpecDisplay.py  WavUtil.py  batdetect2  batdetect2.lnk  bd2Link.py  cli.py  config.txt  gui.py  gui_Config.json  help.html  model_3_700.pth.tar_class_scores.csv  pyproject.toml  run.bat  run.sh  sequence‑level prior.txt  train.bat  train_model.py  utils.py  validate.bat  validate_model.py
Resources/: BatRecordingDirectories.txt  CopyCodeToDownload.bat  SciTE.session  SpeciesNames.csv  excludeDirs.txt
Resources/bats/ann/: 16100322.wav.csv  Barbastelle.wav.csv  DaubentonSocialCalls.wav.csv  DaubentonSocialCalls.wav.json  DaubentonsFeedingBuzz.wav.csv  GreaterHorseshoe.wav.csv  Long_Eared2.wav.csv  NathusiusFeedingBuzz.wav.csv  Natterers.wav.csv  NoctuleFeedingBuzz.wav.csv  PipSocial.wav.csv  Serotine.wav.csv  SopranoFeedingBuzz.wav.csv  SopranoFeedingBuzz.wav.json  SopranoTwoTypesSocial.wav.csv  temp.wav.csv
wavplayer/: wavplay  wavplay.c
