[project]
name = "batdetect2-dpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chime>=0.7.0",
    "colorama>=0.4.6",
    "dearpygui>=2.2",
    "dearpygui-draganddrop>=1.0.0",
    "folium>=0.20.0",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "screeninfo>=0.8.1",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchaudio-filters>=0.2.1",
    "torchcodec>=0.10.0",
    "wakepy>=1.0.0",
]
